--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 a {
@@ -24,11 +25,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  position:relative;
 }
 
 h1 {
@@ -54,16 +52,20 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.flex{
+  display:flex;
+}
 .card {
   padding: 2em;
 }
 
 #app {
-  
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
+  display:flex;
+  
+  gap:1rem;
 }
 
 @media (prefers-color-scheme: light) {
